# goblin_hall

./: Cargo.toml
.github/workflows/: build.yml
assets/config/: camera.json  characters.json  floors.json  game.json  structures.json  zones.json
src/: labels.rs  main.rs  sets.rs
src/components/: body.rs  grid_box.rs  map.rs  mod.rs  spawns.rs  target.rs  world.rs
src/components/cameras/: camera_movement.rs  mod.rs
src/components/characters/: character.rs  creature_type.rs  inventory.rs  mod.rs
src/components/jobs/: assignment_mode.rs  builder_priority.rs  exploration_history.rs  explorer_priority.rs  gatherer_priority.rs  global_assignment_mode.rs  job.rs  job_priority.rs  manual_assignment.rs  miner_priority.rs  mod.rs  previous_job.rs  without_job.rs
src/components/movement/: camera_move_timer.rs  camera_movement.rs  direction.rs  exploration_target.rs  mod.rs  path.rs  speed.rs
src/components/priorities/: exploring.rs  mod.rs  priority.rs  priority_level.rs
src/components/resources/: gatherable.rs  mod.rs  resource.rs
src/components/spawns/: character_spawns.rs  map_spawns.rs  mod.rs  spawn_coordinate.rs  structure_spawns.rs  tdlg_spawnable.rs  zone_spawnable.rs
src/components/structures/: body.rs  mineable.rs  mining_target.rs  mod.rs  setup_storage_area.rs  storage_area.rs  structure.rs
src/components/tasks/: empty_resources_target.rs  exploration_target.rs  mod.rs  (+7 more)
src/events/: mod.rs  point_visited.rs
src/resources/: mod.rs
src/state/: app_state.rs
src/systems/: init.rs  map.rs  mod.rs  mouse.rs  startup.rs
src/utils/: movement.rs
(+65 files in other folders)
