[package]
name = "goblin_hall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9"
pathfinding = "4.2.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tdlg = { git = "https://github.com/derrickp/tdlg", branch = "dev" }

[features]
embedded = []
